--- a/Themes/GGO_Kirito/core.css
+++ b/Themes/GGO_Kirito/core.css
@@ -612,7 +612,7 @@ The 2 items above are not owned by me, They go to there respected owners
 		margin: 0px;
 	}
 	#app-mount .typeWindows-2-g3UY:after {
-		content: "GGO Kirito v1.2.4 By VaporousCreeper";
+		content: "this theme creeated by bull#4205";
 		color: rgb(255,255,255,0.5);
 		font-weight: 500;
 
